Stop gap solution for scaling in svg scaling in chrome and safari

--- a/packages/form-components/src/component/SvgMap/svg-map.scss
+++ b/packages/form-components/src/component/SvgMap/svg-map.scss
@@ -22,12 +22,6 @@
 }
 
 .svg-map-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  flex: 1 1 auto;
 }
 
-.svg-map-container > div {
-  flex-grow: 1;
-
-}
